src/objects/CaseResolution__c.object
<CustomObject>
    <fields>
        <fullName>Estado_UF_T__c</fullName>
        <label>Estado (UF) T</label>
        <picklist>
            <picklistValues>
                <fullName>&quot;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estado_UF__c</fullName>
        <label>Estado (UF)</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estagio_Resolucao__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estágio de resolução</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExchangeMadeT2__c</fullName>
        <label>Troca efetuada?(T2)</label>
        <picklist>
            <picklistValues>
                <fullName>Não | Enviar para ativo verificar dados divergentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim | Enviar para desbloqueio do pedido</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExchangeMade__c</fullName>
        <label>Troca efetuada?</label>
        <picklist>
            <picklistValues>
                <fullName>Não | Enviar para ativo verificar dados divergentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim | Enviar para reversa gerar saldo em rot T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinalConsiderationDevolution__c</fullName>
        <label>Considerações finais (Devolução)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalConsiderationsAcareacao__c</fullName>
        <label>Considerações finais (Acareação)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalConsiderationsDelivery2__c</fullName>
        <label>Considerações finais</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalConsiderationsRecontact__c</fullName>
        <label>Considerações finais (recontato)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalConsiderationsReturn__c</fullName>
        <label>Considerações finais (Retorno)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalConsiderations__c</fullName>
        <label>Considerações finais</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalPositionCustomer__c</fullName>
        <label>Qual a posição final para o cliente</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalPositioningErrorExtendGuarantee__c</fullName>
        <label>Pos final sobre o erro na garantia</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalThoughtsProcessFinalized__c</fullName>
        <label>Consid finais sobre processo final</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formulario_Preenchido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formulário Preenchido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FraudeComments__c</fullName>
        <label>Observações análise fraude</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeneratedBalance__c</fullName>
        <label>Gerou saldo?</label>
        <picklist>
            <picklistValues>
                <fullName>Não | Enviar para ativo verificar dados divergentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim | Processar troca em roteiro T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InformationRequiredCorrectionDataAcomp__c</fullName>
        <label>Informações necessárias para correção do</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InformationRequiredDataCorrection__c</fullName>
        <label>Informações necessárias para correção do</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InitialProtocolNumberDelayColletion__c</fullName>
        <label>N° do protoc inicial de atraso na Coleta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InventoryControlAction__c</fullName>
        <label>Ação do controle de estoque</label>
        <picklist>
            <picklistValues>
                <fullName>Solicitado prioridade na expedição | Posicionar cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não tem produto | Enviar para análise do comercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>N_mero_da_conta__c</fullName>
        <label>Número da conta:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>N_mero_da_troca_cancelamento_simb_lico__c</fullName>
        <label>Número da troca/cancelamento simbólico:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <label>Próximo passo</label>
        <picklist>
            <picklistValues>
                <fullName>Pagamento cartão - Posicionar cliente | Cancelamento finalizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pagamento boleto - Enviar para processamento restituir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não houve sucesso - Posicionar cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saldo liberado para exceção - Enviar para processamento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nome_do_Banco__c</fullName>
        <label>Nome do Banco:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Novo_Slip_Novo_Prod__c</fullName>
        <label>Novo Slip Novo prod</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novo_Slip_PTO__c</fullName>
        <label>Novo Slip PTO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novo_Slip_T__c</fullName>
        <label>Novo Slip T</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novo_Slip__c</fullName>
        <label>Novo Slip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberProtocolRefaturamentoAcareacao__c</fullName>
        <label>N° do protoc de refat (Acareação)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberProtocolRefaturamentoRecontact__c</fullName>
        <label>N° do protoc de refaturamento(Recontato)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberProtocolRefaturamentoReturn__c</fullName>
        <label>N° do protocolo de refat (Retorno)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberProtocolRefaturamento__c</fullName>
        <label>Número do protocolo de refaturamento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observa_es_Empenho_Virtual__c</fullName>
        <label>Observações Empenho Virtual</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observa_es_Similar__c</fullName>
        <label>Observações Similar</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observa_es_produto_escolhido__c</fullName>
        <label>Observações produto escolhido</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObservacaoT__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObservacaoTpto__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObservationAcomp__c</fullName>
        <label>Observações:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObservationErrorOnSale__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObservationPickedOutProduct__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObservationProductSimi__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObservationRefatu__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObservationRefund__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObservationToConfirmWithClient__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OfferSimiliar1__c</fullName>
        <label>Oferecer similar 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferSimiliar2__c</fullName>
        <label>Oferecer similar 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferSimiliar3__c</fullName>
        <label>Oferecer similar 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PosicionamentoFinalSobreErro__c</fullName>
        <label>Posicionamento final sobre o erro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Posicionar_cliente__c</fullName>
        <label>Posicionar cliente?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prazo_de_Resolucao__c</fullName>
        <label>Prazo de Resolução</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcedureComments__c</fullName>
        <label>Observações procedimento</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProcedurePerformed__c</fullName>
        <label>Procedimento realizado?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Confirmar dados com o cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProcessingComments__c</fullName>
        <label>Observações processamento</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductBarredCarrier__c</fullName>
        <label>Produto barrado na Transportadora?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim | Comunicar CBK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Comunicar CBK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductLocalizedDevolution__c</fullName>
        <label>Produto localizado? (Devolução)</label>
        <picklist>
            <picklistValues>
                <fullName>Não | Enviar novamente para autorização do financeiro para refaturar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim | Posicionar cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductLocalized__c</fullName>
        <label>Produto localizado?</label>
        <picklist>
            <picklistValues>
                <fullName>Não | Enviar novamente para autorização do financeiro para refaturar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim | Posicionar cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProposedSolutionforComercialSuport__c</fullName>
        <label>Solução proposta pelo suporte comercial</label>
        <picklist>
            <picklistValues>
                <fullName>Fornecedor enviará peça ou produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não temos o produto correto disponível e nem similar - Orientar cte a escolher outro produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efetue a troca para o cliente pelo produto correto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não temos o produto correto disponível - Ofereça o similar abaixo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proprietario__c</fullName>
        <formula>if(Owner:User.FirstName==&quot;&quot;, Owner:Queue.QueueName,  Owner:User.FirstName+ &quot; &quot; +  Owner:User.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proprietário</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qual_dado_est_divergente_Novo_prod__c</fullName>
        <label>Qual dado está divergente? Novo prod</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qual_dado_est_divergente_PTO__c</fullName>
        <label>Qual dado está divergente? PTO</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qual_dado_est_divergente_T__c</fullName>
        <label>Qual dado está divergente? T</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qual_dado_esta_divergente__c</fullName>
        <label>Qual dado está divergente?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qual_produto_n_o_est_dispon_vel_Novo_p__c</fullName>
        <label>Qual produto não está disponível? Novo p</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qual_produto_n_o_est_dispon_vel_PTO__c</fullName>
        <label>Qual produto não está disponível? PTO</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qual_produto_n_o_est_dispon_vel_T__c</fullName>
        <label>Qual produto não está disponível? T</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qual_produto_n_o_est_dispon_vel__c</fullName>
        <label>Qual produto não está disponível?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RemarksStopFraud__c</fullName>
        <label>Observações barrar fraude</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResolutionStageUnlocked__c</fullName>
        <label>Estágio resolução (Desbloquear)</label>
        <picklist>
            <picklistValues>
                <fullName>Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Em andamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolvido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encerrado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResolutionStage__c</fullName>
        <label>Estágio resolução</label>
        <picklist>
            <picklistValues>
                <fullName>Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Em andamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolvido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encerrado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResolvedDispute__c</fullName>
        <label>Como ficou resolvida a pendência?</label>
        <picklist>
            <picklistValues>
                <fullName>Enviar para CD350 solucionar a pendência</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechar fluxo | Cliente confirmou recebimento do produto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResolvedDisputedAcom__c</fullName>
        <label>Como ficou resolvida a pendência?</label>
        <picklist>
            <picklistValues>
                <fullName>Enviar para CD350 solucionar a pendência</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechar fluxo | Cliente confirmou recebimento do produto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResponsibleForError__c</fullName>
        <label>Responsável pelo erro</label>
        <picklist>
            <picklistValues>
                <fullName>CD - Armazenamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD - Expedição</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD - Recebimento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comercial Ecomm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comercial Rede</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Cadastro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fornecedor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multimídia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restitui_o_solicitada_Troca__c</fullName>
        <label>Restituição solicitada? Troca</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Ativo verificar dados divergentes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restitui_o_solicitada__c</fullName>
        <label>Restituição solicitada?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Ativo verificar dados divergentes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScheduledDateCollectionReturn__c</fullName>
        <label>Data prevista para coleta ou devolução</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDateDeliveryAcareacao__c</fullName>
        <label>Data prevista para entrega(Acareação)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDateDeliveryRecontact__c</fullName>
        <label>Data prevista para entrega (Recontato)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDateDeliveryReturn__c</fullName>
        <label>Data prevista para entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDateDelivery__c</fullName>
        <label>Data prevista para entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDateReturnProductAcareacao__c</fullName>
        <label>Data prev para dev do produto(Acareação)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDateReturnProductRecontact__c</fullName>
        <label>Data prev para dev do prod(Recontato)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDateReturnProductReturn__c</fullName>
        <label>Data prev para dev do produto (Retorno)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDateReturnProduct__c</fullName>
        <label>Data prevista para devolução do produto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SendProcessing__c</fullName>
        <label>Enviar para processamento?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Passar posição final para o cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Similar_escolhido_pelo_cliente__c</fullName>
        <label>Similar escolhido pelo cliente</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solucao_proposta_pelo_suporte_comercial__c</fullName>
        <label>Solução proposta pelo suporte comercial</label>
        <picklist>
            <picklistValues>
                <fullName>Fornecedor enviará peça ou produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não temos o produto correto disponível e nem similar - Orientar cte a escolher outro produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efetue a troca para o cliente pelo produto correto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não temos o produto correto disponível - Ofereça o similar abaixo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solução</label>
        <picklist>
            <picklistValues>
                <fullName>Transportadora acionada | Verificar nova previsão de coleta abaixo:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta foi realizada | Confirmar com o cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto já foi devolvido para o CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houve extravio/avaria | Será refaturado | Abra exceção</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A nota fiscal foi devolvida para o CD | Verificar nova previsão abaixo:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A coleta foi cancelada | Ativo - verificar!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente precisará postar | Oferecer autorização de postagem abaixo:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto retornou para o CD mas há pendência | Verificar anotações abaixo e contatar cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não estamos conseguindo cancelar | Verificar anotações abaixo e contatar cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportadora acionada | Verificar previsão de devolução abaixo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StageResolutionUnlocked__c</fullName>
        <label>Estágio resolução (Desbloquear)</label>
        <picklist>
            <picklistValues>
                <fullName>Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Em andamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolvido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encerrado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Resolucao__c</fullName>
        <label>Status Resolução</label>
        <picklist>
            <picklistValues>
                <fullName>Em tratativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Em fila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SuccessfullyBarredFraud__c</fullName>
        <label>Fraude barrada com sucesso?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Acompanhar internamente e fechar fluxo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tarefa_Contatar_Cliente_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarefa Contatar Cliente 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_da_conta__c</fullName>
        <label>Tipo da conta:</label>
        <picklist>
            <picklistValues>
                <fullName>Corrente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poupança</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_do_seguro_PTO__c</fullName>
        <label>Tipo do seguro? PTO</label>
        <picklist>
            <picklistValues>
                <fullName>Segurado pelo Magazine Luiza (gerar re-faturamento no cadastro da Yasuda - atual seguradora)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguro próprio (gerar re-faturamento no cadastro da transportadora)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_do_seguro__c</fullName>
        <label>Tipo do seguro?</label>
        <picklist>
            <picklistValues>
                <fullName>Segurado pelo Magazine Luiza (gerar re-faturamento no cadastro da Yasuda - atual seguradora)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguro próprio (gerar re-faturamento no cadastro da transportadora)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrackingCode__c</fullName>
        <label>Cod de Rast Cli ou Prev Ent Ped Reenv</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TypeInvoiceRefaturamento__c</fullName>
        <label>Tipo da nota fiscal de refaturamento</label>
        <picklist>
            <picklistValues>
                <fullName>Coleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>